<resources>
    <string name="app_name">EasyLedger</string>
    
    <string name="app_slogan">Ease your money flow!</string>

    <string name="permission_not_granted_msg">This app need these permissions to work.</string>

    <string name="actionbar_title">test title</string>

    <string name="navigation_title_overview">Overview</string>
    <string name="navigation_title_transaction">Transactions</string>
    <string name="navigation_title_chart">Charts</string>

    <string name="overview_totalbalance_title">Total Balance</string>
    <string name="overview_transaction_tag_textview_title">Transactions need to be tagged</string>
    <string name="overview_balance_revenue">Money In ($)</string>
    <string name="overview_balance_spend">Money Out ($)</string>

    <string name="placeholder_time">June 1st</string>
    <string name="placeholder_amount">$12343435.04</string>
    <string name="placeholder_category">luxury shopping</string>
    <string name="placeholder_remark">This guide provides several conceptual examples and many other words are hideen behind all of the scences </string>


    <string name="toolbar_selectAll">Select All</string>
    <string name="toolbar_ignore">Ignore</string>
    <string name="toolbar_delete">Delete</string>
    <string name="toolbar_edit">Share</string>
    <string name="string_toolbar_selection_word">selected</string>


    <string name="menu_title_setting">Settings</string>
    <string name="menu_title_question">Is this app safe?</string>
    <string name="menu_title_feedback">Feedback</string>
    <string name="menu_insert_data">Insert 1000 Data</string>
    <string name="menu_delete_all_data">Delete All</string>
    <string name="menu_insert_data_7days">Insert Data within 7days (0\-6)</string>
    <string name="menu_insert_data_30days">Insert Data within 30days (0\-29)</string>
    <string name="menu_insert_data_180days">Insert Data within 180days (0\-179)</string>
    <string name="menu_insert_data_current_month">Insert Data within this month</string>
    <string name="menu_insert_data_current_week">Insert Data within this week</string>
    <string name="menu_insert_untagged_data">Insert untagged data</string>

    <string name="toolbar_save_btn_title">SAVE</string>


    <string name="explanation_friendly_why_this_app_is_safe">
        This is an open source app that all its "logic" is on github.com,
        the app will read your msg and covert money into graph and ledger transaction that store locally
        . And I create this app as an personal project to find a job</string>
    <string name="explanation_less_friendly_why_this_app_is_safe">
        1. This is an open-source app;
        \n2. I don\'t want to know what\'s in your cellphone......</string>
    <string name="explanation_bad_joke">
        No, it\'s not safe, and very unfortunately your phone\'s data has been retrieved,
        you need to send me $5000 with a request email to delete your personal
        files or your files will be shared all over the internet.</string>

    <string name="button_github">Click to view source code</string>
    <string name="button_question_bad_joke">The Real Reason</string>
    <string name="button_explanation_friendly_version">Friendly Version</string>
    <string name="button_explanation_less_friendly_vesion">Less Friendly Version</string>

    <string name="github_link">https://github.com/miaonagemide/EasyLedger</string>

    <string name="empty_string"> </string>

    <string name="txt_user_need_to_select_one_item">Please select one item to edit</string>

    <!--for child fragment to identify which is the parent-->
    <string name="txt_parent_caller_overview">overview_called</string>
    <string name="txt_parent_caller_ledger">ledger_called</string>

    <string name="title_default_ledger">Overall</string>

    <string name="title_question_fragment">Is this app safe?</string>

    <string name="title_settings_fragment">App Settings</string>

    <string name="title_edit_transaction">Editing Transaction</string>
    <string name="title_add_transaction">Adding Transaction</string>

    <string name="add_edit_transaction_money_flow">Money Flow</string>
    <string name="add_edit_transaction_amount">Amount</string>
    <string name="add_edit_transaction_date">Date</string>

    <string name="add_edit_transaction_category">Category</string>
    <string name="add_edit_transaction_ledger">Ledger</string>
    <string name="add_edit_transaction_remark_hint">Something else to add?</string>
    <string name="add_edit_transaction_amount_hint">0.00</string>
    <string name="add_edit_transaction_date_deafult">Pick A Date</string>

    <string name="add_edit_transaction_money_in">MONEY IN</string>
    <string name="add_edit_transaction_money_out">MONEY OUT</string>

    <string name="add_edit_transaction_warning_enter_categoty">Select A Category</string>
    <string name="add_edit_transaction_warning_enter_amount">Enter An Amount</string>
    <string name="add_edit_transaction_warning_enter_date">Select A Date</string>

    <string name="add_edit_transaction_money_flow_change_btn_text">Money In/Out</string>

    <string name="add_edit_transaction_money_flow_change_msg_money_in">Transaction type revenue.</string>
    <string name="add_edit_transaction_money_flow_change_msg_money_out">Transaction type expense.</string>

    <string name="dollor_sign">$</string>


    <string name="data_type_email">text/plain</string>
    <string name="no_email_app">You don\'t have an app to send email to me: </string>
    <string name="developer_email_addr">hanzhou244@gmail.com</string>
    <string name="email_feedback_subject">Feedback to Easyledger</string>


    <string name="msg_deleting_complete">Records deleted!!!</string>
    <string name="msg_deleting_need_to_have_one">Please select at least one records!</string>



    <!-- Key name for storing size in SharedPreferences -->
    <string name="pref_size_key" translatable="false">size</string>

    <string name="pref_size_default">detault edit </string>
    <string name="pref_size_label">default_edittxt_label</string>


    <string name="chart_name_text_expense">Expense Chart</string>
    <string name="chart_name_text_revenue">Reveune Chart</string>
    <string name="chart_history_chart_description">NO. of weeks from now</string>

    <string name="bar_chart_comparison_label_revenue">Total Revenues Each Period</string>
    <string name="bar_chart_comparison_label_expense">Total Expenses Each Period</string>

    <string name="title_dialog_chart_setting">Chart Setting</string>

    <string name="dialog_main_1_current_period">Setting for current period</string>
    <string name="dialog_main_2_history_period">Setting for history period</string>


    <string name="dialog_chart_title_revene_expense_type">Choose Revenues/Expenses Length</string>
    <string name="dialog_custom_length_label">Pick A Time </string>

    <string name="dialog_custom_length_result_display_left_part">From\u0020</string>
    <string name="dialog_custom_length_result_display_right_part">\u0020days back to today</string>

    <string name="dialog_enter_length_edittext_hint">NO. of days back</string>

    <string name="dialog_chart_type_week">Show Current Week</string>
    <string name="dialog_chart_type_month">Show Current Month</string>
    <string name="dialog_chart_type_year">Show Current Year</string>


    <string name="dialog_chart_select_bar_char">Display Bar Chart</string>
    <string name="dialog_chart_select_pie_chart">Display Pie Chart</string>
    <string name="dialog_chart_radiogroup_title">Chart Type For Revenue &amp; Expense</string>


    <string name="dialog_chart_title_select_period">Number Of Periods To Compare</string>
    <string name="dialog_chart_title_select_period_type">Length Of Each Period</string>

    <string name="dialog_history_period_by_week">Set Period By Week</string>
    <string name="dialog_history_period_by_month">Set Period By Month</string>

    <string name="dialog_switch_percentage_amount_title">Use %(on) or $(off)</string>

    <string name="dialog_add_btn">+</string>
    <string name="dialog_minus_btn">-</string>


    <string name="setting_warning_cannot_be_blank">Enter An Integer</string>

    <string name="dialog_negative_btn_title">Cancel</string>
    <string name="dialog_positive_btn_title">Save</string>

    <string name="dialog_toast_saved">Setting Saved</string>
    <string name="dialog_toast_setting_not_change">No Change Made</string>
    <string name="dialog_toast_not_saved">Setting NOT Saved</string>


    <string name="category_others">Others</string>


    <string name="notification_title_msg_from_firebase">Message from developer</string>
    <string name="main_notification_channel_name">Primary</string>


    <string name="add_edit_transaction_toast_user_input_invalidate">Please enter required information.</string>
    <string name="chart_setting_no_change_made">No Change Made</string>
    <string name="sms_base_uri">content://sms/inbox</string>
    <string name="sms_pdus">pdus</string>
    <string name="error_msg_getting_pdus">onReceive: error getting \'pdus\'</string>
    <string name="sms_string_extra_format">format</string>
    <string name="ledger_name_rbc">RBC</string>
    <string name="error_msg_extract_sms_fail">extractSMSDebit:   error while converting sms to TransactionEntry</string>
    <string name="remove_remark_begin"><![CDATA[(history ledger ->]]></string>
    <string name="remove_remark_end">)</string>
    <string name="dialog_positive_btn_ok">OK</string>
    <string name="date_format_yyyymm">YYYYMM</string>
    <string name="toast_time_exceed">time exceed  today</string>
    <string name="pie_chart_set_label">Categories</string>
    <string name="error_time_earlier_than_history">time get back to app is eariler than get left app, is there a time travel?</string>
    <string name="overview_bar_data_label">Bar data</string>
    <string name="april_first">04-01</string>
    <string name="app_exit_notice">Tap one more time to exit app.</string>
    <string name="demo">Demo</string>
    <string name="privacy_policy_url">https://github.com/miaonagemide/privacy_policy/blob/master/EasyLedger_privacy_policy.md</string>
    <string name="menu_item_privacy_policy_title">Privacy Policy</string>


</resources>
