<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/dialog_main_current_period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_main_1_current_period"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/dialog_rgroup_revenue_expense_period_type"
            style="@style/dialog_sub_class_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/dialog_title_revenue_expense_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_chart_title_revene_expense_type"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radioButton_current_period_type_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_chart_type_month" />

            <RadioButton
                android:id="@+id/radioButton_current_period_type_week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_chart_type_week" />


        </RadioGroup>

        <RadioGroup
            android:id="@+id/dialog_rgroup_revenue_expense_chart_type"
            style="@style/dialog_sub_class_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/radio_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_chart_radiogroup_title"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radioButton_current_period_type_piechart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_chart_select_pie_chart" />

            <RadioButton
                android:id="@+id/radioButton_current_period_type_barchart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_chart_select_bar_char" />


        </RadioGroup>

        <LinearLayout
            android:id="@+id/dialog_layout_switch_percentage_amount"
            style="@style/dialog_sub_class_margin"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_switch_percentage_amount_title"
                android:textSize="20sp" />

            <Switch
                android:id="@+id/dialog_switch_percentage_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                />

        </LinearLayout>

        <TextView
            android:id="@+id/dialog_main_2_history_period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_main_2_history_period"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dialog_title_period_number"
            style="@style/dialog_sub_class_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_chart_title_select_period"
            android:textSize="20sp" />

        <LinearLayout
            style="@style/dialog_sub_class_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dialog_plus_number"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:text="@string/dialog_add_btn" />

            <TextView
                android:id="@+id/dialog_display_number_history_periods"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/empty_string"
                tools:text="12" />

            <Button
                android:id="@+id/dialog_minus_number"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:text="@string/dialog_minus_btn" />
        </LinearLayout>


        <RadioGroup
            android:id="@+id/dialog_rgroup_history_period_type"
            style="@style/dialog_sub_class_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/dialog_title_period_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_chart_title_select_period_type"

                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/dialog_history_period_by_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_history_period_by_month" />

            <RadioButton
                android:id="@+id/dialog_history_period_by_week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_history_period_by_week" />


        </RadioGroup>
    </LinearLayout>
</ScrollView>