<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/toolbar_edit"
        android:orderInCategory="100"
        android:title="@string/toolbar_edit"
        android:icon="@drawable/icon_toolbar_edit"
        app:showAsAction="always" />


    <item
        android:id="@+id/toolbar_delete"
        android:orderInCategory="200"
        android:icon="@drawable/icon_toolbar_delete"
        android:title="@string/toolbar_delete"
        app:showAsAction="always" />

    <item
        android:id="@+id/toolbar_select_all"
        android:orderInCategory="300"
        android:title="@string/toolbar_selectAll"
        android:icon="@drawable/icon_toolbar_all"
        app:showAsAction="always" />
    <item
        android:id="@+id/toolbar_ignore"
        android:orderInCategory="400"
        android:title="@string/toolbar_ignore"
        android:icon="@drawable/icon_toolbar_ignore_move_record_to_others"
        app:showAsAction="always" />

</menu>