<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_overview"
        android:icon="@drawable/icon_navigation_overview"
        android:title="@string/navigation_title_overview"

        android:enabled="true"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/navigation_transaction"
        android:title="@string/navigation_title_transaction"
        android:icon="@drawable/icon_navigation_transaction"
        android:enabled="true"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/navigation_charts"
        android:title="@string/navigation_title_chart"

        android:icon="@drawable/icon_navigation_chart"
        android:enabled="true"
        app:showAsAction="ifRoom"
        />
</menu>